--- a/source/sass/utils/_mixins.scss
+++ b/source/sass/utils/_mixins.scss
@@ -57,7 +57,7 @@
     transition: all 250ms linear;
 
     background: linear-gradient(15deg, rgba($Primaire, .8) 10%, rgba($Secondaire, .8) 100%);
-    filter: saturate(100%);
+    filter: saturate(100%) contrast(150%);
 
     transform: scale(1.01);
 
